--- a/style.css
+++ b/style.css
@@ -25,9 +25,6 @@
   }
 }
 @layer global {
-  :root {
-  }
-
   * {
     box-sizing: border-box;
     margin: 0;
@@ -35,5 +32,70 @@
   }
   body {
     font-family: "Noto Sans", Arial, Helvetica, sans-serif;
+    width: 100%;
+  }
+  .light-bg {
+    background: lightgray;
+  }
+}
+@layer header {
+  header {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: white;
+    padding: 0.4rem;
+    margin: 1rem auto;
+    border-radius: 12px;
+  }
+  #to-light {
+    display: none;
+    padding: 0.5rem;
+    border-radius: 12px;
+    cursor: pointer;
+  }
+  #to-dark {
+    border: none;
+    padding: 0.5rem;
+    border-radius: 12px;
+    cursor: pointer;
+  }
+  #to-dark:hover {
+    background: darkgray;
+  }
+}
+@layer hero {
+  #hero {
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+  }
+  #hero button {
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    margin: 0.4rem;
+  }
+  #hero button:hover {
+    background: red;
+  }
+  .active-filter {
+    background: red;
+  }
+}
+@layer extensions-list {
+  #extensions-list {
+    display: flex;
+    width: 100%;
+  }
+  .extension {
+    background: white;
+    padding: 0.5rem;
+    border-radius: 12px;
   }
 }
