--- a/style.css
+++ b/style.css
@@ -147,10 +147,13 @@
   .extension__details {
     display: flex;
     gap: 1rem;
+    align-items: start;
+    padding: 0.3rem 0;
   }
   .extension__name {
     font-size: 1.2rem;
-    margin-block: 0.3rem;
+    margin-block: 0rem;
+    margin-bottom: 0.3rem;
     color: var(--heading-fg);
   }
   .extension__description {
@@ -159,6 +162,7 @@
   .buttons {
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
   .remove-btn {
     background: var(--element-bg);
