--- a/style.css
+++ b/style.css
@@ -76,6 +76,9 @@
     padding: 0.4rem;
     margin: 1rem auto;
     border-radius: 12px;
+    box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.1);
   }
   #logo path {
     fill: var(--heading-fg);
@@ -134,6 +137,7 @@
     gap: 1rem;
     align-items: center;
     justify-content: center;
+    margin-bottom: 3rem;
   }
   .extension {
     background: var(--element-bg);
@@ -143,6 +147,9 @@
     flex-direction: column;
     max-width: 375px;
     gap: 1rem;
+    box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.1);
   }
   .extension__details {
     display: flex;
